# financial-tg-bot

./: .cursor.json  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Info_from_google_sheets.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
src/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  tree.py
src/alembic/: env.py
src/configs/: default.yaml
src/core/: database.py  main.py  settings.py
src/tbank_converter/: __init__.py  cli.py  config.py  pipeline.py
src/tbank_converter/domain/: categorization.py  models.py  transform.py
src/tbank_converter/formulas/: __init__.py  builder.py
src/tbank_converter/io/: __init__.py  csv_reader.py  xlsx_writer.py
src/tests/: __init__.py  helpers.py  test_categorization.py  test_csv_reader.py  test_transform.py  test_xlsx_smoke.py
src/tests/fixtures/: sample_tbank.csv
src/tg_bot/: main.py
