[project]
name = "financialbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytelegrambotapi>=4.29.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
